# EPnP_Eigen

./: .gitignore  CMakeLists.txt  epnp_eigen.cpp  epnp_eigen.h  epnp_eigen_debug_tool.cpp  main.cpp  reference_2d_points.csv  reference_3d_points.csv
